# GR_Desk

./: .env.example  .gitignore  CHANGELOG  CLAUDE.md  README.md  app.py  decorators.py  example_employee.json  example_employees.json  example_tickets.json  gr-desk.service  grcore.service  overhaul_prompt.md  prompt.md  pyproject.toml  requirements.txt  template_configuration.yml
.claude/: settings.local.json
blueprints/: api_ingest.py  changes_module.py  crm_module.py  hrm_module.py  itsm_core.py  itsm_queues.py  reports_module.py  services_module.py
config/: branding.yml  business_units.yml  configuration.yml  employee_navbar.yml  employee_titles.yml  public_navbar.yml  service_types.yml
example_data/: changes.json  customers.json  customers.yaml  employees.json  employees.yaml  services.json  services.yaml
helper_scripts/: basic_version_upgrade.sh  first_time_setup.sh  init_v1_0_datafiles.py  reset_tech_password.py
local_handlers/: local_authentication_handler.py  local_changes_handler.py  local_config_loader.py  local_customer_handler.py  local_email_handler.py  local_employee_handler.py  local_services_handler.py  local_storage_handler.py  local_webhook_handler.py
my_data/: core_configuration.yml  customers.json  employee.json  tickets.json
servicedesk/: ._models  __init__.py  config.py  extensions.py  types.py  validation.py
static/: alerts.js  helpdesk.js  styles.css
templates/: ._crm_dashboard.html  400.html  403.html  404.html  500.html  base.html  changes_console.html  changes_dashboard.html  changes_home.html  changes_submit.html  crm_form.html  (+18 more)
(+67 files in other folders)
